# maleware-sandbox-simulator

./: .Dockerfile  .gitignore  Dockerfile  README.md  config.yaml  entrypoint.sh  pyproject.toml  requirement.txt
app/: __init__.py  routes.py
app/static/js/: chart.js
app/templates/: dashboard.html
sandbox/: filesystem_monitor.py  log_writer.py  network_logger.py  report_generator.py  sample_loader.py  sandbox_controller.py
