[project]
name = "maleware-sandbox-simulator"
version = "0.1.0"
description = "Safely execute non-infectious malware samples in a controlled environment and log behavioral indicators (filesystem, network, process activity)."
authors = [
    {name = "plaboncosta",email = "plabonjoseph@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
